Plot markers with database results
- Ask the db for the list of churches instead of a few hardcoded
records.
- Use the lonlat from the db instead of geocoding in the browser.

--- a/map.html.template
+++ b/map.html.template
@@ -51,25 +51,10 @@
           zoom: 10,
           center: stJohns,
         });
-        const marker = new google.maps.Marker({
-          position: stJohns,
-          map: map
-        });
-        const geocoder = new google.maps.Geocoder();
         for (const ch of churches) {
-          geocoder.geocode({'address': ch.address}, function(results, status) {
-            if (status == 'OK') {
-              const latlong = {
-                lat: results[0].geometry.location.lat(),
-                lng: results[0].geometry.location.lng()
-              };
-              new google.maps.Marker({
-                position: latlong,
-                map: map,
-              });
-            } else {
-              console.log("Geocoding failed for " + ch.address + ": " + status);
-            }
+          new google.maps.Marker({
+            position: { lng: ch.longitude, lat: ch.latitude },
+            map: map,
           });
         }
       }
