Fix popup not updating when you change the departure time
If the popup is already open and you select a new departure time, the
table refreshes, but not the popup. We fixed that by tracking the
currently-selected church so that when the departure time changes, we
can lookup the record with the same church id for the new time.

--- a/map.html.template
+++ b/map.html.template
@@ -96,6 +96,10 @@
         const chooser = document.getElementById("arrivalTime");
         chooseArrivalTime(chooser.value);
         drawTable();
+        if (currentChurch) {
+          const ch = churchesById[currentChurch.id];
+          setCurrentChurch(ch);
+        }
       }
 
 
@@ -198,10 +202,16 @@
       let map = null;
       let infoWindow = null;
       const stJohns = { lng: -122.82605, lat: 45.51339 };
+      let currentChurch = null;
 
-      function showPopup(ch) {
+      function setCurrentChurch(ch) {
+        currentChurch = ch;
         highlightRow(ch);
         infoWindow.setContent(infoWindowContent(ch));
+      }
+
+      function showPopup(ch) {
+        setCurrentChurch(ch);
         infoWindow.open({
           anchor: ch.marker,
           map,
